# tun2ostrich

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  latest.json  socks_auto.json  socks_auto_new.json  tun_auto.json  tun_auto_los.json  tun_auto_win.json
misc/: build_cross.sh  dispatcher_new.rs  dns_client_old.rs
misc/netstack-lwip/: build.rs
misc/netstack-lwip/src/: bindings.rs
netstack-lwip/: build.rs
netstack-lwip/src/: stack_impl.rs
netstack-lwip/src/lwip/custom/: lwipopts.h
netstack-lwip/src/lwip/custom/arch/: cc_others.h
ostrich/: Cargo.toml  build.rs
ostrich-bin/: Cargo.toml
ostrich-bin/src/: main.rs  manager.rs  ostrich.rs  worker.rs
ostrich-ffi/: Cargo.toml
ostrich-ffi/src/: lib.rs
ostrich/src/: lib.rs  sys.rs  sys_raw.rs  util.rs
ostrich/src/app/: copy.rs  dispatcher.rs  dns_client.rs  dns_client_old.rs  fake_dns.rs  logger.rs  mod.rs  nat_manager.rs  router.rs
ostrich/src/app/inbound/: manager.rs  mod.rs  network_listener.rs  tun_listener.rs
ostrich/src/app/outbound/: manager.rs  mod.rs  selector.rs
ostrich/src/common/: cmd_linux.rs  cmd_macos.rs  cmd_windows.rs  io.rs  mod.rs  resolver.rs
ostrich/src/config/: external_rule.rs  geosite.rs  mod.rs
ostrich/src/config/conf/: config.rs
ostrich/src/config/internal/: config.proto  config.rs  mod.rs
ostrich/src/config/json/: config.rs
ostrich/src/config/json/tests/: test_config.rs
ostrich/src/mobile/: logger.rs
ostrich/src/option/: mod.rs
ostrich/src/proxy/: datagram.rs  mod.rs
ostrich/src/proxy/trojan/inbound/: tcp.rs
ostrich/src/proxy/trojan/outbound/: mod.rs  tcp.rs  tls.rs  udp.rs
ostrich/src/proxy/tun/: inbound.rs  mod.rs  windows.rs
ostrich/src/proxy/tun/netstack/: addr.rs  mod.rs  stack.rs  stack_impl.rs  tcp.rs  udp.rs  virt_device.rs
ostrich/src/proxy/tun/netstack/sys/: mod.rs
ostrich/src/proxy/tun/netstack/sys/unix/: android.rs  bsd.rs  linux.rs
ostrich/src/proxy/tun/netstack/sys/unix/apple/: macos.rs  mod.rs
ostrich/src/proxy/tun/netstack/sys/windows/: mod.rs  net.rs  windows.rs
ostrich/src/proxy/tun/win/: ipset.rs  mod.rs  route.rs  windows.rs
ostrich/tests/: common.rs  test_in_chain_1.rs  test_out_chain_1.rs  test_out_chain_3.rs  test_out_chain_4.rs  test_out_chain_5.rs  test_out_chain_6.rs  test_out_chain_7.rs  test_out_chain_8.rs  test_ws_amux_trojan.rs  test_ws_trojan.rs
protocol/: Cargo.toml  build.rs
protocol/proto/: notification.proto
protocol/src/: frame.rs  lib.rs  notification.rs  opt.rs
rust-tun/: .cargo_vcs_info.json  Cargo.toml
rust-tun/examples/: read.rs  tcpsink.rs  tun2tcp-async.rs  tun2tcp.rs  tun2udp.rs  wireshark.rs
rust-tun/src/: configuration.rs
rust-tun/src/async/: codec.rs
rust-tun/src/async/win/: mod.rs
rust-tun/src/platform/windows/: device.rs
shadow-net/: Cargo.toml
shadow-net/src/: tcp.rs  udp.rs
shadow-net/src/sys/: mod.rs
shadow-net/src/sys/unix/: mod.rs  others.rs  uds.rs
shadow-net/src/sys/unix/bsd/: freebsd.rs  macos.rs
shadow-net/src/sys/unix/linux/: mod.rs
shadow-net/src/sys/windows/: mod.rs
win-tun/: Cargo.toml
win-tun/examples/: read-async.rs
win-tun/src/platform/posix/: fd.rs
win-tun/src/platform/windows/: mod.rs
win_tun/: Cargo.toml
win_tun/examples/: ping-tun.rs  wintun.rs
win_tun/src/: lib.rs
win_tun/src/async/: mod.rs
win_tun/src/async/win/: device.rs
win_tun/src/platform/windows/: device.rs
