cargo-features = ["strip"]
[workspace]
members = [
    "ostrich",
    "ostrich-bin",
    "ostrich-ffi",
]
default-members = ["ostrich-bin"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
