[package]
name = "ostrich-bin"
version = "0.3.1"
edition = "2018"

[[bin]]
name = "ostrich_worker"
path = "src/worker.rs"

[[bin]]
name = "ostrich_manager"
path = "src/manager.rs"


#[[bin]]
#name = "ostrich"
#path = "src/worker.rs"


[features]
default = [
    "default-ring",
]

default-ring = [
    "ostrich/default-ring",
    "ostrich/ctrlc",
#    "ostrich/dns-over-tls"
]

default-openssl = [
    "ostrich/default-openssl",
    "ostrich/ctrlc",
]


[dependencies]
ostrich = { path = "../ostrich", default-features = true }
tokio = { version = "1", features = ["rt"] }
argh = "0.1"
rlimit = "0.6.2"
signal-hook = "0.3.13"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
futures = "0.3.21"
#async-process = "1.2.0"
#async-std = "1.11.0"
