[package]
name = "ostrich-ffi"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[lib]
name = "ostrich"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = [
    "default-ring",
]

default-ring = [
    "ostrich/default-ring",
]

default-openssl = [
    "ostrich/default-openssl",
]


[dependencies]
ostrich = { path = "../ostrich", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

[build-dependencies]
bindgen = "0.59.2"
