[package]
name = "protocol"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.0.1"
crc = "2.0.0"
anyhow = "1.0.41"
protobuf = "3.0.0-alpha.10"
prost = "0.10.1"

[build-dependencies]
protobuf-codegen = "3.0.0-alpha.10"
protoc-bin-vendored = "3.0.0"
prost-build = "0.10.1"

