[package]
name = "tun"
version = "0.5.3"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "TUN device creation and handling."
repository = "https://github.com/meh/rust-tun"
keywords = ["tun", "network", "tunnel", "bindings"]

[dependencies]
libc = "0.2"
thiserror = "1"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "ios", target_os = "android", target_os = "windows"))'.dependencies]
tokio = { version = "1", features = ["net", "macros"], optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
bytes = { version = "1", optional = true }
byteorder = { version = "1", optional = true }
# This is only for the `ready` macro.
futures-core = { version = "0.3", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
ioctl = { version = "0.6", package = "ioctl-sys" }

# MARKER BEGIN
[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.2.1"
packet = "0.1"
ipconfig = "0.3.0"
log = "0.4"
env_logger = "0.9.0"
winapi = "0.3"
subprocess = "0.2"
widestring = "0.5"
pcap-file = "1.1"
# MARKER END

[dev-dependencies]
packet = "0.1"
futures = "0.3"

[features]
async = ["tokio", "tokio-util", "bytes", "byteorder", "futures-core"]


[[example]]
name = "read"

[[example]]
name = "read-async"
required-features = [ "async", "tokio/rt-multi-thread" ]

[[example]]
name = "read-async-codec"
required-features = [ "async", "tokio/rt-multi-thread" ]

[[example]]
name = "ping-tun"
required-features = [ "async", "tokio/rt-multi-thread" ]

[[example]]
name = "wintun"

[[example]]
name = "wireshark"

[[example]]
name = "tun2udp"
required-features = [ "async", "tokio/rt-multi-thread", "tokio/io-util" ]

[[example]]
name = "tun2tcp"

[[example]]
name = "tun2tcp-async"
required-features = [ "async", "tokio/rt-multi-thread", "tokio/io-util" ]

[[example]]
name = "tcpsink"
required-features =  [ "async", "tokio/rt-multi-thread", "tokio/io-util" ]